Fix broken copy-paste operations on Interstitial pages.

The RenderFrameHostDelegate::SetFocusedFrame function was added to keep track
of inner web contents but the base implementation in the delegate that is a
no-op broken interstitial pages which also need to keep track of the focused
frame.

BUG=635656
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2727483003
Cr-Commit-Position: refs/heads/master@{#454038}

Former-commit-id: 0ae3030718bc7e0673868ae81b33a3cccd663e62